--- a/thirtydollarwebsite/index.html
+++ b/thirtydollarwebsite/index.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html>
     <head>
-        <script src="/js/all.js"></script>
-
         <title>DON'T YOU LECTURE ME WITH YOUR THIRTY DOLLAR WEBSITE</title>
         <link rel="stylesheet" href="🎨.css?v=5a" charset="UTF-8" />
         <link rel="icon" href="assets/🗿.png"></link>
@@ -12,9 +10,9 @@
         <meta property="og:description" content="🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿🗿">
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="https://thirtydollar.website/assets/🗿.png">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+        <script src="./jquery.min.js"></script>
+        <script src="./jquery-ui.min.js"></script>
+        <script src="./jquery.ui.touch-punch.min.js"></script>
     </head>
 
     <body style="text-align: center">
